--- a/guide/refs.bib
+++ b/guide/refs.bib
@@ -1,13 +1,14 @@
-%% Created using Papers on Wed, 24 Jan 2018.
+%% Created using Papers on Tue, 23 Oct 2018.
 %% http://papersapp.com/papers/
 
 @article{Shannon:1948wk,
 author = {Shannon, Claude Elwood},
 title = {{A Mathematical Theory of Communication}},
-journal = {The Bell System Technical Journal},
+journal = {Bell Syst Tech J},
 year = {1948},
 volume = {27},
 pages = {379--423},
+month = jul
 }
 
 @article{Daniels:2017cq,
@@ -17,6 +18,7 @@ journal = {Nat Comms},
 year = {2017},
 volume = {8},
 pages = {14301--8},
+month = feb
 }
 
 @booklet{Anonymous:mVL3xTtr,
@@ -45,6 +47,7 @@ year = {2011},
 volume = {106},
 number = {9},
 pages = {090601},
+month = mar
 }
 
 @article{Ranganathan:2007wz,
@@ -56,12 +59,23 @@ eprint = {0712.4397v1},
 eprinttype = {arxiv},
 eprintclass = {q-bio.QM},
 pages = {1--8},
+month = dec
+}
+
+@article{Lee:ky,
+author = {Lee, Edward D},
+title = {{Partisan Intuition Belies Strong, Institutional Consensus and Wide Zipf{\textquoteright}s Law for Voting Blocs in US Supreme Court}},
+journal = {J Stat Phys},
+year = {2018},
+pages = {1--12}
 }
 
 @phdthesis{Ising:1924vf,
 author = {Ising, E},
 title = {{Beitrag zur Theorie des Ferromagnetismus}},
 year = {1924},
+address = {University of Hamburg},
+month = dec
 }
 
 @book{Bretthorst:2003ua,
@@ -77,6 +91,7 @@ author = {Newman, M E J and Barkema, G T},
 title = {{Monte Carlo Methods in Statistical Physics}},
 publisher = {Clarendon Press},
 year = {1999},
+month = feb
 }
 
 @article{Stephens:2010hi,
@@ -87,6 +102,7 @@ year = {2010},
 volume = {81},
 number = {6},
 pages = {066119},
+month = jun
 }
 
 @inproceedings{Weigt:2009ba,
@@ -96,9 +112,10 @@ booktitle = {PNAS},
 year = {2009}
 }
 
-@booklet{MacKay:2005wc,
-title = {{Information Theory, Inference and Learning Algorithms}},
+@book{MacKay:2005wc,
 author = {MacKay, David J C},
+title = {{Information Theory, Inference and Learning Algorithms}},
+publisher = {Cambridge University Press},
 year = {2005}
 }
 
@@ -110,6 +127,7 @@ year = {2016},
 volume = {162},
 number = {5},
 pages = {1294--1308},
+month = feb
 }
 
 @article{Castellano:2009ce,
@@ -120,6 +138,7 @@ year = {2009},
 volume = {81},
 number = {2},
 pages = {591--646},
+month = may
 }
 
 @article{Shemesh:2013dd,
@@ -129,6 +148,7 @@ journal = {eLife},
 year = {2013},
 volume = {2},
 pages = {e00759},
+month = sep
 }
 
 @article{Lee:2015ev,
@@ -136,14 +156,20 @@ author = {Lee, Edward D and Broedersz, Chase P and Bialek, William},
 title = {{Statistical Mechanics of the US Supreme Court}},
 journal = {J Stat Phys},
 year = {2015},
-pages = {1--27},
+volume = {160},
+number = {2},
+pages = {275--301},
+month = apr
 }
 
 @article{Schneidman:2006he,
-author = {Schneidman, E and Berry, M J and {RS II} and Bialek, W},
+author = {Schneidman, Elad and Berry II, Michael J and Segev, Ronen and Bialek, William},
 title = {{Weak pairwise correlations imply strongly correlated network states in a neural population}},
 journal = {Nature},
-year = {2006}
+year = {2006},
+volume = {440},
+number = {20},
+pages = {1007--1012}
 }
 
 @article{Nemenman:2004wz,
@@ -170,6 +196,7 @@ year = {2009},
 eprint = {0906.4779v4},
 eprinttype = {arxiv},
 eprintclass = {cs.LG},
+month = jun
 }
 
 @book{Bialek:2012ueb,
@@ -186,6 +213,17 @@ booktitle = {PNAS},
 year = {2006}
 }
 
+@article{Mora:2010jxb,
+author = {Mora, Thierry and Walczak, Aleksandra M and Bialek, William and Curtis G Callan, Jr},
+title = {{Maximum entropy models for antibody diversity}},
+journal = {PNAS},
+year = {2010},
+volume = {107},
+number = {12},
+pages = {5405--5410},
+month = mar
+}
+
 @article{Nguyen:2017ww,
 author = {Nguyen, H Chau and Zecchina, Riccardo and Berg, Johannes},
 title = {{Inverse statistical problems: from the inverse Ising problem to data science}},
@@ -194,6 +232,7 @@ year = {2017},
 eprint = {1702.01522v3},
 eprinttype = {arxiv},
 eprintclass = {cond-mat.dis-nn},
+month = feb
 }
 
 @article{Ganmor:2011ct,
@@ -211,6 +250,16 @@ author = {M{\'e}zard, Marc and Montanari, Andrea},
 title = {{Information, Physics, and Computation}},
 publisher = {Oxford University Press},
 year = {2009},
+month = jan
+}
+
+@article{Barton:2013fja,
+author = {Barton, John and Cocco, Simona},
+title = {{Ising models for neural activity inferred via selective cluster expansion: structural and coding properties}},
+journal = {J Stat Mech},
+year = {2013},
+number = {03},
+pages = {1--57}
 }
 
 @article{Broderick:2007wq,
@@ -219,16 +268,7 @@ title = {{Faster solutions of the inverse pairwise Ising problem}},
 journal = {arXiv},
 year = {2007},
 pages = {1--8},
-}
-
-@article{Mora:2010jxa,
-author = {Mora, Thierry and Walczak, Aleksandra M and Bialek, William and Curtis G Callan, Jr},
-title = {{Maximum entropy models for antibody diversity}},
-journal = {PNAS},
-year = {2010},
-volume = {107},
-number = {12},
-pages = {5405--5410},
+month = dec
 }
 
 @book{Cover:2006tl,
@@ -240,6 +280,17 @@ address = {Hoboken},
 edition = {2nd}
 }
 
+@article{Aurell:2012hi,
+author = {Aurell, Erik and Ekeberg, Magnus},
+title = {{Inverse Ising Inference Using All the Data}},
+journal = {Phys Rev Lett},
+year = {2012},
+volume = {108},
+number = {9},
+pages = {090201},
+month = mar
+}
+
 @article{Hyvarinen:2007ed,
 author = {Hyv{\"a}rinen, Aapo},
 title = {{Some extensions of score matching}},
@@ -248,6 +299,7 @@ year = {2007},
 volume = {51},
 number = {5},
 pages = {2499--2512},
+month = feb
 }
 
 @article{Jaynes:1957fy,
@@ -258,6 +310,7 @@ year = {1957},
 volume = {106},
 number = {4},
 pages = {620},
+month = may
 }
 
 @article{Tkacik:2006vq,
@@ -265,6 +318,7 @@ author = {Tka{\v c}ik, Ga{\v s}per and Schneidman, Elad and Berry II, Michael J 
 title = {{Ising models for networks of real neurons}},
 journal = {arXiv},
 year = {2006},
+month = nov
 }
 
 @article{SohlDickstein:2011im,
@@ -275,40 +329,6 @@ year = {2011},
 volume = {107},
 number = {22},
 pages = {220601},
+month = nov
 }
-
-@article{Aurell:2012hi,
-author = {Aurell, Erik and Ekeberg, Magnus},
-title = {{Inverse Ising Inference Using All the Data}},
-journal = {Phys Rev Lett},
-year = {2012},
-volume = {108},
-number = {9},
-pages = {090201},
-}
-
-@article{BarCoc13,
-Author = {Barton, John and Cocco, Simona},
-Doi = {10.1088/1742-5468/2013/03/P03002},
-Issn = {1742-5468},
-Journal = {{J Stat Mech Theory Exp}},
-Month = {March},
-Number = {03},
-Pages = {P03002},
-Title = {{Ising models for neural activity inferred via selective cluster expansion: structural and coding properties}},
-Volume = {2013},
-Year = {2013}}
-
-@article{CocMon12,
-Archiveprefix = {arXiv},
-Arxivid = {arXiv:1110.5416v1},
-Author = {Cocco, S and Monasson, R},
-Date-Added = {2018-01-02 22:26:53 +0000},
-Date-Modified = {2018-01-02 22:31:14 +0000},
-Eprint = {arXiv:1110.5416v1},
-Journal = {Journal of Statistical Physics},
-Pages = {1--57},
-Title = {{Adaptive cluster expansion for the inverse Ising problem: convergence, algorithm and tests}},
-Year = {2012}}
-
 
