--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -41,7 +41,7 @@
 \section*{(1) Overview}
 \vspace{0.5cm}
 
-\section*{Convenient interface to inverse Ising and maximum entropy (ConIII+): A Python 3 package for solving maximum entropy models}
+\section*{Convenient interface to inverse Ising (ConIII): A Python 3 package for solving Ising-type maximum entropy models}
 
 \section*{Paper Authors}
 1. Lee, Edward D.; \\
@@ -53,10 +53,10 @@
 
 \section*{Abstract}
 
-ConIII+ (pronounced CON-ee PLUS) is an open-source Python project providing a simple interface to solving the Ising model plus other maximum entropy models. We describe the maximum entropy problem and give an overview of the algorithms that are implemented as part of ConIII (\url{https://github.com/eltrompetero/coniii}) including Monte Carlo histogram, pseudolikelihood,  minimum probability flow, a regularized mean field method, and a cluster expansion method. Our goal is to make a variety of maximum entropy techniques accessible to those unfamiliar with the techniques and accelerate workflow for users.
+ConIII (pronounced CON-ee) is an open-source Python project providing a simple interface to solving the pairwise and higher order Ising model and a base for extension to other maximum entropy models. We describe the maximum entropy problem and give an overview of the algorithms that are implemented as part of ConIII (\url{https://github.com/eltrompetero/coniii}) including Monte Carlo histogram, pseudolikelihood,  minimum probability flow, a regularized mean field method, and a cluster expansion method. Our goal is to make a variety of maximum entropy techniques accessible to those unfamiliar with the techniques and accelerate workflow for users.
 
 \section*{Keywords}
-maxent, Ising, spin glass, collective behavior
+inverse Ising, maxent, maximum entropy, inference
 
 \section*{Introduction}
 Many biological and social systems are characterized by collective behavior: the correlated pattern of neural firing \cite{Schneidman:2006he}, protein diversity in the immune system \cite{Mora:2010jxb}, conflict participation in monkeys \cite{Daniels:2017cq}, flocking in birds \cite{Bialek:2012cs}, statistics of letters in words \cite{Stephens:2010hi}, or consensus voting in the US Supreme Court \cite{Lee:2015ev,Lee:ky}. Statistical physics is a natural approach to probing such systems precisely because they are collective \cite{Castellano:2009ce}.
@@ -71,7 +71,7 @@ ConIII is intended to provide a centralized resource for the inverse Ising probl
 
 %We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
-In the first few sections of this paper, we give a brief overview of maxent and describe the algorithms implemented in this package. Then, we discuss at a high level some of the model fitting issues that are relevant for building and fitting maxent models. Finally, we describe the architecture of the package and how to contribute.
+In the first few sections of this paper, we give a brief overview of maxent and describe the algorithms implemented in this package. Then, we describe the architecture of the package and how to contribute.
 
 \section*{What is maximum entropy?}
 Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that follows from insisting on elementary principles of consistency. According to Shannon, the entropy over the probability distribution $p(\rs)$ of possible discrete configurations $\mathcal S$ of a system is
@@ -135,7 +135,7 @@ The Ising model is a statistical physics model of magnetism \cite{Ising:1924vf}.
 \label{gr:ising}
 \end{figure}
 
-The energy of each configuration determines its probability via Eq \eqref{eq:energy}:
+The energy of each configuration determines its probability via Eq \eqref{eq:energy} such that lower energy states are more probable:
 \begin{align}
 	E(\rs) &= -\sum_{\rm i<j}^N J_{\rm ij}\si\sj -\sum_{\rm i=1}^Nh_{\rm i}\si.
 \end{align}
@@ -400,7 +400,7 @@ The adaptive cluster expansion method is implemented in the {\tt ClusterExpansio
 The package is divided into three principal modules containing the algorithms for solving the inverse maxent problem ({\tt solvers.py}), the Monte Carlo Markov Chain (MCMC) sampling algorithms ({\tt samplers.py}), and supporting ``utility'' functions for the remaining modules ({\tt utils.py}) as shown in Fig.~\ref{gr:architecture}.
 Besides the {\tt utils.py} module, the package is organized around classes that correspond to different algorithms. This class-based structure ensures that the state of the solver or sampler, including the data it was fit to and the current guess for the parameters, are all contained within the instance of the algorithm class. As a result, the current state of work can be saved and moved between workstations using the Python package {\tt dill}.
 
-For the solvers, the different algorithms available are accessible from the {\tt coniii.solvers} module as listed in Fig.~\ref{gr:architecture}. These algorithm classes are all derived from a base {\tt Solver} class as shown in Fig.~\ref{gr:architecture}. In the accompanying release version of the package, v1.0.0, the method {\tt Solver.solve} serves as the interface for solving the inverse maxent problem. Once a solution has been found, samples can be taken from the model distribution by calling {\tt Solver.generate\_samples()} that wraps calls to the {\tt Solver.sampler} instance of a sampling class. For the Ising model, this is typically an instance of {\tt FastMCIsing} from the {\tt coniii.solvers} module. The only other available class is {\tt Metropolis}, but other sampling algorithms listed in the {\tt samplers.py} box in Fig.~\ref{gr:architecture} will be released with later versions of this package.
+For the solvers, the different algorithms available are accessible from the {\tt coniii.solvers} module as listed in Fig.~\ref{gr:architecture}. These algorithm classes are all derived from a base {\tt Solver} class as shown in Fig.~\ref{gr:architecture}. In the accompanying release version of the package, v1.0.2, the method {\tt Solver.solve} serves as the interface for solving the inverse maxent problem. Once a solution has been found, samples can be taken from the model distribution by calling {\tt Solver.generate\_samples()} that wraps calls to the {\tt Solver.sampler} instance of a sampling class. For the Ising model, this is typically an instance of {\tt FastMCIsing} from the {\tt coniii.solvers} module. The only other available class is {\tt Metropolis}, but other sampling algorithms listed in the {\tt samplers.py} box in Fig.~\ref{gr:architecture} will be released with later versions of this package.
 
 To keep the solution algorithms generic, they require definition of the maxent model upon instantiation through the definition of the keyword argument {\tt calc\_observables}.
 
@@ -412,15 +412,19 @@ To keep the solution algorithms generic, they require definition of the maxent m
 
 
 \section*{Quality Control}
-For checks of basic functionality, the package is released with test modules that can be run with the package \href{https://pytest.org}{pytest}.
+For checks of basic functionality, the package is released with unit tests that can be run with the Python package \href{https://pytest.org}{pytest}.
 
-For a test of the algorithms, the most direct one is to generate a system where the parameters are known, sample from the system to generate a data set, and to run the inverse solution to make sure that the found parameters and correlations match. With a finite sample, exact correspondence to the correct parameters is not expected. Furthermore, most of the algorithms only return an approximate solution. For others, the fidelity of the found parameters to the original ones will depend on whether or not the approximation is valid. The Jupyter notebook released with the software provides examples for using the algorithms included in ConIII for a random system of five spins. The included examples show how well the different algorithm might be expected to do in this case. We recommend that that user run this notebook to check that the algorithms converge closely the solutions already shown in the provided figures.
+For a test of the algorithms, the most direct one is to generate a system where the parameters are known, sample from the system to generate a data set, and to run the inverse solution to make sure that the correlations and parameters match the known values. With a finite sample, exact correspondence to the correct parameters is not expected although differences should decrease with a larger sample. Furthermore, most of the algorithms only return an approximate solution such that the fidelity of the found parameters to the original ones will depend on the sample size and whether or not the approximation is valid. The Jupyter notebook released with the software provides examples for using the algorithms included in ConIII for a random system of five spins. The included examples show how well the different algorithm might be expected to do in this case. We recommend that that user run this notebook to check how well different algorithms converge to the solutions depending on the algorithm and sample size.
+
+More importantly, the user can check if the algorithms match the expected correlations closely or not. How one checks the validity of a particular maxent model for data is beyond the scope of this paper, but we point the reader to the appendix of Ref~\cite{Lee:2015ev} where the methodology is explained in detail for a broad audience.
+
+If there are any issues or bugs in the software, we organize improvements and patches through  the \href{https://github.com/eltrompetero/coniii}{GitHub repository} where pull requests can be made. 
 
 
 \section*{(2) Availability}
 \vspace{0.5cm}
 \section*{Operating system}
-MacOS, Linux, Windows
+Linux, MacOS, Windows
 
 \section*{Programming language}
 Python 3.6
@@ -434,8 +438,8 @@ Python packages jupyter $\geq$ v1.0.0, multiprocess v0.70.5, numpy, scipy, jobli
 	\item[Persistent identifier:] \url{https://pypi.org/project/coniii/}
 	\item[Licence:] MIT License
 	\item[Publisher:]  Edward D. Lee
-	\item[Version published:] v1.0.0
-	\item[Date published:] \textcolor{blue}{dd/mm/yy}
+	\item[Version published:] v1.0.2
+	\item[Date published:] 25/10/18
 \end{description}
 
 {\bf Code repository}
@@ -444,7 +448,7 @@ Python packages jupyter $\geq$ v1.0.0, multiprocess v0.70.5, numpy, scipy, jobli
 	\item[Name:] Github
 	\item[Persistent identifier:] \url{https://github.com/eltrompetero/coniii}
 	\item[Licence:] MIT License
-	\item[Version published:] v1.0.0
+	\item[Version published:] v1.0.2
 \end{description}
 
 \section*{Language}
@@ -452,15 +456,16 @@ English
 
 
 \section*{(3) Reuse potential}
-To contribute either an algorithm for the inverse maxent problem or a sampling technique, we suggest following the template for the classes described in the base {\tt Solver} and {\tt Sampler} classes. New algorithms should be pushed to the Github repository along with an example of an example solution that can be included in the usage guide Jupyter notebook.
+To contribute either an algorithm for the inverse maxent problem or a sampling technique, we suggest following the template for the classes described in the base {\tt Solver} and {\tt Sampler} classes. New algorithms should be filed as a pull request to the \href{https://github.com/eltrompetero/coniii}{GitHub repository} along with an example solution that can be included in the usage guide Jupyter notebook.
 
 
 \section*{Acknowledgements}
-We thank the anonymous reviewers for helpful feedback on the accessibility of the software.
+We thank the anonymous reviewers for helpful feedback on both the manuscript and the accessibility of the software.
 
 
 \section*{Funding statement}
 EDL was supported by an NSF Graduate Fellowship under grant no. DGE-1650441. This research was supported in part by a congressional research grant provided by the Dirksen Congressional Center.
+
 
 \section*{Competing interests}
 The authors declare that they have no competing interests.
