--- a/guide/guide.tex
+++ b/guide/guide.tex
@@ -65,13 +65,13 @@ This approach contrasts with the typical problem in statistical physics where on
 
 The pairwise maxent model, the Ising model, has been of particular interest because of its simplicity and generality. A variety of algorithms have been proposed to solve the inverse Ising problem, but different approaches are disparately available on separate code bases in different coding languages, which makes comparison difficult and pedagogy more complicated. With ConIII, it is possible to solve the inverse Ising problem with a variety of algorithms in just a few lines of code. 
 
-ConIII is intended to provide a centralized resource for the inverse Ising problem and easy extension to other maxent problems. Although some of the implemented algorithms are specific to the Ising model and convenient, Ising-specific functions are included as part of package, other maxent models can be solved as well by specifying the particular constraints of the maxent model of interest. 
+ConIII is intended to provide a centralized resource for the inverse Ising problem and easy extension to other maxent problems. Although some of the implemented algorithms are specific to the pairwise Ising model, other maxent models can be solved as well by specifying the particular constraints of the maxent model of interest. 
 %The modular structure of ConIII was inspired by the machine learning package scikit-learn, where each algorithm is implemented in a class.
 %There are a variety of techniques for approaching the inverse problem|often in context of a particular model|but they are often presented as different approaches without clear relations to one another. Instead of focusing on the details of each technique separately, we relate these techniques to one another and point out when one would fail or be difficult to apply.
 
 %We hope to provide a (soft) introduction to the analytic, numerical, and computational techniques used to solve these problems to make them accessible to students especially at the graduate level in physics and beyond (and even advanced undergraduates). With the goal of furthering general understanding, we aim not to be rigorous but to be accurate and comprehensible, pointing to the relevant literature whenever possible. Although we strive to be as clear and explicit as possible across this guide, a good background in mathematics or physics will be extremely helpful. In some places, we have left out steps in the derivations, and we encourage the reader to work out the missing steps.
 
-In the first few sections of this paper, we give a brief overview of maxent and describe the algorithms implemented in this package. Then, we describe the architecture of the package and how to contribute.
+In the first few sections of this paper, we give a brief overview of maxent and describe the algorithms implemented in this package (for those unfamiliar with maxent, we also provide some useful references especially Refs~\cite{Bialek:2012ueb} and the appendix of \cite{Lee:2015ev}). Then, we describe the architecture of the package and how to contribute.
 
 \section*{What is maximum entropy?}
 Shannon introduced the concept of information entropy in his seminal paper about communication over a noisy channel \cite{Shannon:1948wk}. Information entropy is the unique measure of uncertainty that follows from insisting on elementary principles of consistency. According to Shannon, the entropy over the probability distribution $p(\rs)$ of possible discrete configurations $\mathcal S$ of a system is
@@ -205,7 +205,7 @@ At each step, we update the Lagrangian multipliers $\{\lambda_\rk\}$ while being
 This has a fixed point at the correct parameters.
 %Another heuristic is to begin with a small sample size and increase the size of the sample set as we refine our estimates of the parameters.
 
-In practice, MCH can be difficult to tune properly and one must check in on the progress of the algorithm often. One issue is choosing how to set the learning rule parameters $\eta$ and $\epsilon$. One suggestion for $\eta$ is to shrink it as the inverse of the number of iterations \cite{Tkacik:2006vq}. Another issue is that parameters cannot be changed by too much when using the MCH approximation step or the extrapolation to $\lambda_{\rm k}'$ will be inaccurate and the algorithm will fail to converge. In ConIII, this can be controlled by setting a bound on the maximum possible change in each parameter  $\Delta\lambda_{\rm max}$ and restricting the norm of the vector of change in parameters $\sum_{\rm k} \sqrt{\Delta\lambda_{\rm k}^2}$. Another issue is setting the parameters of the MCMC sampling routine. Both the burn time (the number of iterations before starting to sample) and sampling iterations (number of iterations between samples) must be large enough that we are sampling from the equilibrium distribution.  Typically, these are found by measuring how long the energy or individual parameter values remain correlated as MCMC progresses. The parameters may need to be updated during the course of MCH because the sampling parameters may need to change with the estimated parameters of the model. For some regimes of parameter space, samples are correlated over long times and alternative sampling methods like Wolff or Swendsen-Wang would vastly reduce time to reach the equilibrium distribution although these are not included in the current release of ConIII+. We do not discuss these sampling details here, but see Refs \cite{MacKay:2005wc,Newman:1999wu} for examples.
+In practice, MCH can be difficult to tune properly and one must check in on the progress of the algorithm often. One issue is choosing how to set the learning rule parameters $\eta$ and $\epsilon$. One suggestion for $\eta$ is to shrink it as the inverse of the number of iterations \cite{Tkacik:2006vq}. Another issue is that parameters cannot be changed by too much when using the MCH approximation step or the extrapolation to $\lambda_{\rm k}'$ will be inaccurate and the algorithm will fail to converge. In ConIII, this can be controlled by setting a bound on the maximum possible change in each parameter  $\Delta\lambda_{\rm max}$ and restricting the norm of the vector of change in parameters $\sum_{\rm k} \sqrt{\Delta\lambda_{\rm k}^2}$. Another issue is setting the parameters of the MCMC sampling routine. Both the burn time (the number of iterations before starting to sample) and sampling iterations (number of iterations between samples) must be large enough that we are sampling from the equilibrium distribution.  Typically, these are found by measuring how long the energy or individual parameter values remain correlated as MCMC progresses. The parameters may need to be updated during the course of MCH because the sampling parameters may need to change with the estimated parameters of the model. For some regimes of parameter space, samples are correlated over long times and alternative sampling methods like Wolff or Swendsen-Wang would vastly reduce time to reach the equilibrium distribution although these are not included in the current release of ConIII. We do not discuss these sampling details here, but see Refs \cite{MacKay:2005wc,Newman:1999wu} for examples.
 
 The main computational cost for MCH lies in the sampling step. For each iteration of MCH, the runtime is proportional to the number of samples $n$, number of MCMC iterations $T$, and the number of constraints for the Ising model $N^2$,
 $\mathcal{O}(T n N^2)$, whereas the MCH estimate is relatively quick $\mathcal{O}(t n N^2)$ because the number of MCH approximation steps needed to converge is much smaller than the number of MCMC sampling iterations $t<<T$.
@@ -400,13 +400,13 @@ The adaptive cluster expansion method is implemented in the {\tt ClusterExpansio
 The package is divided into three principal modules containing the algorithms for solving the inverse maxent problem ({\tt solvers.py}), the Monte Carlo Markov Chain (MCMC) sampling algorithms ({\tt samplers.py}), and supporting ``utility'' functions for the remaining modules ({\tt utils.py}) as shown in Fig.~\ref{gr:architecture}.
 Besides the {\tt utils.py} module, the package is organized around classes that correspond to different algorithms. This class-based structure ensures that the state of the solver or sampler, including the data it was fit to and the current guess for the parameters, are all contained within the instance of the algorithm class. As a result, the current state of work can be saved and moved between workstations using the Python package {\tt dill}.
 
-For the solvers, the different algorithms available are accessible from the {\tt coniii.solvers} module as listed in Fig.~\ref{gr:architecture}. These algorithm classes are all derived from a base {\tt Solver} class as shown in Fig.~\ref{gr:architecture}. In the accompanying release version of the package, v1.0.2, the method {\tt Solver.solve} serves as the interface for solving the inverse maxent problem. Once a solution has been found, samples can be taken from the model distribution by calling {\tt Solver.generate\_samples()} that wraps calls to the {\tt Solver.sampler} instance of a sampling class. For the Ising model, this is typically an instance of {\tt FastMCIsing} from the {\tt coniii.solvers} module. The only other available class is {\tt Metropolis}, but other sampling algorithms listed in the {\tt samplers.py} box in Fig.~\ref{gr:architecture} will be released with later versions of this package.
+For the solvers, the different algorithms available are accessible from the {\tt coniii.solvers} module as listed in Fig.~\ref{gr:architecture}. These algorithm classes are all derived from a base {\tt Solver} class as shown in Fig.~\ref{gr:architecture}. In the accompanying release version of the package, v1.0.3, the method {\tt Solver.solve} serves as the interface for solving the inverse maxent problem. Once a solution has been found, samples can be taken from the model distribution by calling {\tt Solver.generate\_samples()} that wraps calls to the {\tt Solver.sampler} instance of a sampling class. For the Ising model, this is typically an instance of {\tt FastMCIsing} from the {\tt coniii.solvers} module. The only other available class is {\tt Metropolis}, but other sampling algorithms listed in the {\tt samplers.py} box in Fig.~\ref{gr:architecture} will be released with later versions of this package.
 
 To keep the solution algorithms generic, they require definition of the maxent model upon instantiation through the definition of the keyword argument {\tt calc\_observables}.
 
 \begin{figure}[tb]
 	\includegraphics[width=\linewidth,clip=True,trim=100 360 80 0]{architecture}
-	\caption{ConIII architecture. The principal modules are {\tt solvers.py}, {\tt samplers.py}, and {\tt utils.py}. The module {\tt solvers.py} contains classes based on a the super class {\tt Solver} that each implement a different algorithm for solving the relevant inverse maxent problem accessible through the method {\tt Solver.solve()}. The {\tt samplers.py} module contains two algorithms for Monte Carlo Markov Chain sampling and will support other samplers in future versions (gray font) including the Wolff sampling, Swendsen-Wang sampling, and parallel tempering. The {\tt utils.py} module contains supporting functions for the other modules such as the few examples listed. ConIII's highly modularized structure ensures that contributed algorithms can be appended independently of existing code.}
+	\caption{ConIII architecture. The principal modules are {\tt solvers.py}, {\tt samplers.py}, and {\tt utils.py}. The module {\tt solvers.py} contains classes based on {\tt Solver} that each implement a different algorithm for solving the relevant inverse maxent problem accessible through the method {\tt Solver.solve()}. The {\tt samplers.py} module contains two algorithms for Monte Carlo Markov Chain sampling and will support other samplers in future versions (gray font) including Wolff sampling, Swendsen-Wang sampling, and parallel tempering. The {\tt utils.py} module contains supporting functions for the other modules such as the few examples listed. ConIII's modularized structure ensures that contributed algorithms can be appended independently of existing code.}
 	\label{gr:architecture}
 \end{figure}
 
@@ -414,7 +414,7 @@ To keep the solution algorithms generic, they require definition of the maxent m
 \section*{Quality Control}
 For checks of basic functionality, the package is released with unit tests that can be run with the Python package \href{https://pytest.org}{pytest}.
 
-For a test of the algorithms, the most direct one is to generate a system where the parameters are known, sample from the system to generate a data set, and to run the inverse solution to make sure that the correlations and parameters match the known values. With a finite sample, exact correspondence to the correct parameters is not expected although differences should decrease with a larger sample. Furthermore, most of the algorithms only return an approximate solution such that the fidelity of the found parameters to the original ones will depend on the sample size and whether or not the approximation is valid. The Jupyter notebook released with the software provides examples for using the algorithms included in ConIII for a random system of five spins. The included examples show how well the different algorithm might be expected to do in this case. We recommend that that user run this notebook to check how well different algorithms converge to the solutions depending on the algorithm and sample size.
+The most direct test of the algorithms is to generate a system where the parameters are known, sample from the system to generate a data set, and run the inverse solution to make sure that the correlations and parameters match the known values. With a finite sample, exact correspondence to the correct parameters is not expected although differences should decrease with a larger sample. Furthermore, most of the algorithms only return an approximate solution such that the fidelity of the found parameters to the original ones will depend on the sample size and whether or not the approximation is valid. The Jupyter notebook released with the software provides examples for using the algorithms included in ConIII for a random system of five spins. We recommend that the user run this notebook to check how well different algorithms converge to the solutions depending on the algorithm and sample size.
 
 More importantly, the user can check if the algorithms match the expected correlations closely or not. How one checks the validity of a particular maxent model for data is beyond the scope of this paper, but we point the reader to the appendix of Ref~\cite{Lee:2015ev} where the methodology is explained in detail for a broad audience.
 
@@ -438,7 +438,7 @@ Python packages jupyter $\geq$ v1.0.0, multiprocess v0.70.5, numpy, scipy, jobli
 	\item[Persistent identifier:] \url{https://pypi.org/project/coniii/}
 	\item[Licence:] MIT License
 	\item[Publisher:]  Edward D. Lee
-	\item[Version published:] v1.0.2
+	\item[Version published:] v1.0.3
 	\item[Date published:] 25/10/18
 \end{description}
 
@@ -448,7 +448,7 @@ Python packages jupyter $\geq$ v1.0.0, multiprocess v0.70.5, numpy, scipy, jobli
 	\item[Name:] Github
 	\item[Persistent identifier:] \url{https://github.com/eltrompetero/coniii}
 	\item[Licence:] MIT License
-	\item[Version published:] v1.0.2
+	\item[Version published:] v1.0.3
 \end{description}
 
 \section*{Language}
@@ -473,10 +473,6 @@ The authors declare that they have no competing interests.
 %\section*{Conclusion}
 %Maxent provides a coherent framework for modeling a diverse body of biological and social systems.  The approach is structured to consider easily issues of model selection,  embodying a canonical approach for the scientific process: we start with the simplest models and the fewest constraints possible and then increase the complexity of the model until it makes good predictions. In principle, we could add as many constraints as would allow us to better fit the data, but complex models are more computationally expensive and often do not generalize well.  Maxent therefore stops before adding all possible constraints, leaving the model otherwise as structureless as possible.
 %In this sense, the maxent approach is a principled method of statistical inference that is relevant beyond its roots in statistical physics.  We have built ConIII as an accessible software package in the hope that it will inspire those unfamiliar with maxent approaches to experiment and apply this technique to their own research questions.
-
-\textcolor{blue}{Please enter references in the Harvard style and include a DOI where available, citing them in the text with a number in square brackets, e.g. \\ }
-
-\textcolor{blue}{[1] Piwowar, H A 2011 Who Shares? Who Doesn't? Factors Associated with Openly Archiving Raw Research Data. PLoS ONE 6(7): e18657. DOI: \\ http://dx.doi.org/10.1371/journal.pone.0018657.}
 
 \bibliography{refs}
 
