updates to readme

--- a/guide/refs.bib
+++ b/guide/refs.bib
@@ -1,5 +1,160 @@
-%% Created using Papers on Tue, 23 Oct 2018.
+%% Created using Papers on Mon, 29 Oct 2018.
 %% http://papersapp.com/papers/
+
+@article{Vesper:2014cb,
+author = {Vesper, C and Knoblich, G and Sebanz, N},
+title = {{Our actions in my mind: Motor imagery of joint action}},
+journal = {Neuropsychologia},
+year = {2014},
+volume = {55},
+pages = {115--121},
+annote = {Joint coordination in jumping.
+
+Experiment 1:
+Must imagine how long it takes to jump on one's own and then anticipate when one should jump given idea of what an imagined partner would jump
+
+Results are consistent with actual jumping.
+
+Experiment 2:
+Fitts law is violated: way of computing how it takes to plan out a task}
+}
+
+@proceedings{Williams:1996ve,
+title = {{Gaussian processes for regression}},
+year = {1996},
+publisher = {MIT},
+month = jun
+}
+
+@article{Brunton:2013kg,
+author = {Brunton, B W and Botvinick, M M and Brody, C D},
+title = {{Rats and Humans Can Optimally Accumulate Evidence for Decision-Making}},
+journal = {Science},
+year = {2013},
+volume = {340},
+number = {6128},
+pages = {95--98},
+month = apr
+}
+
+@article{Neda:2000ew,
+author = {Neda, Z and Ravasz, E and Vicsek, T and Brechet, Y and Barab{\'a}si, A L},
+title = {{Physics of the rhythmic applause}},
+journal = {Phys Rev E},
+year = {2000},
+volume = {61},
+number = {6},
+pages = {6897--6992},
+month = jun
+}
+
+@article{Venkadesan:2007dd,
+author = {Venkadesan, Madhusudhan and Guckenheimer, John and Valero-Cuevas, Francisco J},
+title = {{Manipulating the edge of instability}},
+journal = {J Biomech},
+year = {2007},
+volume = {40},
+number = {8},
+pages = {1653--1661},
+month = jan
+}
+
+@article{Pecenka:2011bv,
+author = {Pecenka, Nadine and Keller, Peter E},
+title = {{The role of temporal prediction abilities in interpersonal sensorimotor synchronization}},
+journal = {Exp Brain Res},
+year = {2011},
+volume = {211},
+number = {3-4},
+pages = {505--515},
+month = mar
+}
+
+@article{Aboufadel:1996vi,
+author = {Aboufadel, Edward},
+title = {{A mathematician catches a baseball}},
+journal = {Amer Math Monthly},
+year = {1996},
+volume = {103},
+number = {10},
+pages = {870--878}
+}
+
+@article{Itakura:1975jh,
+author = {Itakura, F},
+title = {{Minimum prediction residual principle applied to speech recognition}},
+journal = {IEEE Trans Acoust, Speech, Signal Process},
+year = {1975},
+volume = {23},
+number = {1},
+pages = {67--72},
+month = feb
+}
+
+@article{Kilner:2004gw,
+author = {Kilner, James M and Vargas, Claudia and Duval, Sylvie and Blakemore, Sarah-Jayne and Sirigu, Angela},
+title = {{Motor activation prior to observation of a predicted movement}},
+journal = {Nat Neurosci},
+year = {2004},
+volume = {7},
+number = {12},
+pages = {1299--1301},
+month = dec
+}
+
+@article{Gneiting:2013ee,
+author = {Gneiting, Tilmann},
+title = {{Strictly and non-strictly positive definite functions on spheres}},
+journal = {Bernoulli},
+year = {2013},
+volume = {19},
+number = {4},
+pages = {1327--1349},
+month = sep
+}
+
+@article{Hart:2014gx,
+author = {Hart, Y and Noy, L and Feniger-Schaal, R and Mayo, A E and Alon, U},
+title = {{Individuality and togetherness in joint improvised motion}},
+journal = {PLoS ONE},
+year = {2014},
+volume = {9},
+number = {2},
+pages = {e87213}
+}
+
+@unpublished{Vicon:2016ut,
+author = {{Vicon}},
+title = {{Personal Communication}},
+month = jul,
+year = {2016}
+}
+
+@article{DiWu:2018kj,
+author = {Di Wu and Jos{\'e}, Jorge V and Nurnberger, John I and Torres, Elizabeth B},
+title = {{A Biomarker Characterizing Neurodevelopment with applications in Autism}},
+journal = {Sci Rep},
+year = {2018},
+pages = {1--14},
+month = jan
+}
+
+@article{Kelso:1984hf,
+author = {Kelso, J A},
+title = {{Phase transitions and critical behavior in human bimanual coordination}},
+journal = { Am J Physiol Regul Integr Comp Physiol},
+year = {1984},
+volume = {246},
+number = {6},
+pages = {R1000--R1004},
+month = jun
+}
+
+@techreport{Welch:2006tx,
+author = {Welch, G and Bishop, G},
+title = {{An introduction to the Kalman filter}},
+year = {2006}
+}
 
 @article{Shannon:1948wk,
 author = {Shannon, Claude Elwood},
@@ -11,324 +166,382 @@ pages = {379--423},
 month = jul
 }
 
-@article{Daniels:2017cq,
-author = {Daniels, Bryan C and Krakauer, David C and Flack, Jessica C},
-title = {{Control of finite critical behaviour in a small-scale social system}},
-journal = {Nat Comms},
-year = {2017},
-volume = {8},
-pages = {14301--8},
-month = feb
-}
-
-@booklet{Anonymous:mVL3xTtr,
-title = {{Information Criteria and Statistical Modeling}},
-author = {Konishi, Sadanori and Kitagawa, Genshiro},
-howpublished = {Springer New York},
-address = {New York, NY},
-year = {2008}
-}
-
-@article{Bialek:2012cs,
-author = {Bialek, William and Cavagna, Andrea and Giardina, Irene and Mora, Thierry and Silvestri, Edmondo and Viale, Massimiliano and Walczak, Aleksandra M},
-title = {{Statistical mechanics for natural flocks of birds}},
-journal = {PNAS},
-year = {2012},
-volume = {109},
-number = {13},
-pages = {4786--4791}
-}
-
-@article{Monasson:2011fo,
-author = {Cocco, S and Monasson, R},
-title = {{Adaptive Cluster Expansion for Inferring Boltzmann Machines with Noisy Data}},
-journal = {Phys Rev Lett},
-year = {2011},
-volume = {106},
-number = {9},
-pages = {090601},
-month = mar
-}
-
-@article{Ranganathan:2007wz,
-author = {Bialek, William and Ranganathan, Rama},
-title = {{Rediscovering the power of pairwise interactions}},
-journal = {arXiv},
-year = {2007},
-eprint = {0712.4397v1},
-eprinttype = {arxiv},
-eprintclass = {q-bio.QM},
-pages = {1--8},
-month = dec
-}
-
-@article{Lee:ky,
-author = {Lee, Edward D},
-title = {{Partisan Intuition Belies Strong, Institutional Consensus and Wide Zipf{\textquoteright}s Law for Voting Blocs in US Supreme Court}},
-journal = {J Stat Phys},
-year = {2018},
-pages = {1--12}
-}
-
-@phdthesis{Ising:1924vf,
-author = {Ising, E},
-title = {{Beitrag zur Theorie des Ferromagnetismus}},
-year = {1924},
-address = {University of Hamburg},
-month = dec
-}
-
-@book{Bretthorst:2003ua,
-author = {Jaynes, E T},
-editor = {Bretthorst, G L},
-title = {{Probability Theory: The Logic of Science}},
-publisher = {Cambridge University Press},
-year = {2003}
-}
-
-@book{Newman:1999wu,
-author = {Newman, M E J and Barkema, G T},
-title = {{Monte Carlo Methods in Statistical Physics}},
-publisher = {Clarendon Press},
-year = {1999},
-month = feb
-}
-
-@article{Stephens:2010hi,
-author = {Stephens, Greg J and Bialek, William},
-title = {{Statistical mechanics of letters in words}},
-journal = {Phys Rev E},
-year = {2010},
-volume = {81},
-number = {6},
-pages = {066119},
-month = jun
-}
-
-@inproceedings{Weigt:2009ba,
-author = {Weigt, M and White, R A and Szurmant, H},
-title = {{Identification of direct residue contacts in protein{\textendash}protein interaction by message passing}},
-booktitle = {PNAS},
-year = {2009}
-}
-
-@book{MacKay:2005wc,
-author = {MacKay, David J C},
-title = {{Information Theory, Inference and Learning Algorithms}},
-publisher = {Cambridge University Press},
-year = {2005}
-}
-
-@article{Nemenman:2016kl,
-author = {Merchan, Lina and Nemenman, Ilya},
-title = {{On the Sufficiency of Pairwise Interactions in Maximum Entropy Models of Networks}},
-journal = {J Stat Phys},
+@article{Minderer:2016je,
+author = {Minderer, Matthias and Harvey, Christopher D and Donato, Flavio and Moser, Edvard I},
+title = {{Neuroscience: Virtual reality explored}},
+journal = {Nature},
 year = {2016},
-volume = {162},
-number = {5},
-pages = {1294--1308},
-month = feb
-}
-
-@article{Castellano:2009ce,
-author = {Castellano, Claudio and Fortunato, Santo and Loreto, Vittorio},
-title = {{Statistical physics of social dynamics}},
-journal = {Rev Mod Phys},
-year = {2009},
-volume = {81},
-number = {2},
-pages = {591--646},
+volume = {533},
+number = {7603},
+pages = {324--325},
 month = may
 }
 
-@article{Shemesh:2013dd,
-author = {Shemesh, Yair and Sztainberg, Yehezkel and Forkosh, Oren and Shlapobersky, Tamar and Chen, Alon and Schneidman, Elad},
-title = {{High-order social interactions in groups of mice}},
-journal = {eLife},
-year = {2013},
-volume = {2},
-pages = {e00759},
-month = sep
+@article{Konvalinka:2010dv,
+author = {Konvalinka, Ivana and Vuust, Peter and Roepstorff, Andreas and Frith, Chris D},
+title = {{Follow you, Follow me: Continuous Mutual Prediction and Adaptation in Joint Tapping:}},
+journal = {Q J Exp Psychol},
+year = {2010},
+volume = {63},
+number = {11},
+pages = {2220--2230},
+month = nov
 }
 
-@article{Lee:2015ev,
-author = {Lee, Edward D and Broedersz, Chase P and Bialek, William},
-title = {{Statistical Mechanics of the US Supreme Court}},
-journal = {J Stat Phys},
-year = {2015},
-volume = {160},
-number = {2},
-pages = {275--301},
+@article{Scheurich:2018iq,
+author = {Scheurich, Rebecca and Zamm, Anna and Palmer, Caroline},
+title = {{Tapping Into Rate Flexibility: Musical Training Facilitates Synchronization Around Spontaneous Production Rates}},
+journal = {Front Psychol},
+year = {2018},
+volume = {9},
+pages = {1--13},
 month = apr
 }
 
-@article{Schneidman:2006he,
-author = {Schneidman, Elad and Berry II, Michael J and Segev, Ronen and Bialek, William},
-title = {{Weak pairwise correlations imply strongly correlated network states in a neural population}},
-journal = {Nature},
-year = {2006},
-volume = {440},
-number = {20},
-pages = {1007--1012}
+@article{Aronov:2014hn,
+author = {Aronov, Dmitriy and Tank, David W},
+title = {{Engagement of Neural Circuits Underlying 2D Spatial Navigation in a Rodent Virtual Reality System}},
+journal = {Neuron},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {442--456},
+month = oct
 }
 
-@article{Nemenman:2004wz,
-author = {Nemenman, Ilya},
-title = {{Information theory, multivariate dependence, and genetic network inference}},
-journal = {arXiv},
-year = {2004},
-eprint = {CA9E4D1E-54BD-4A66-8095-6749D1E5F141},
-eprinttype = {scholar}
+@article{McBeath:1995ui,
+author = {McBeath, Michael K and Shaffer, Dennis M and Kaiser, Mary K},
+title = {{How baseball outfielders determine where to run to catch fly balls}},
+journal = {Science},
+year = {1995},
+volume = {268},
+number = {5210},
+pages = {569--573},
+month = apr
 }
 
-@book{Reif:2009uf,
-author = {Reif, F},
-title = {{Fundamentals of Statistical and Thermal Physics}},
-publisher = {Waveland Press},
-year = {2009}
-}
-
-@article{Sohl-Dickstein:2009tt,
-author = {Sohl-Dickstein, Jascha and Battaglino, Peter and DeWeese, Michael R},
-title = {{Minimum Probability Flow Learning}},
-journal = {arXiv},
-year = {2009},
-eprint = {0906.4779v4},
-eprinttype = {arxiv},
-eprintclass = {cs.LG},
-month = jun
-}
-
-@book{Bialek:2012ueb,
-author = {Bialek, W S},
-title = {{Biophysics: Searching for Principles}},
-publisher = {Princeton University Press},
-year = {2012}
-}
-
-@inproceedings{Lezon:2006ws,
-author = {Lezon, T R and Banavar, J R and Cieplak, M},
-title = {{Using the principle of entropy maximization to infer genetic interaction networks from gene expression patterns}},
-booktitle = {PNAS},
-year = {2006}
-}
-
-@article{Mora:2010jxb,
-author = {Mora, Thierry and Walczak, Aleksandra M and Bialek, William and Curtis G Callan, Jr},
-title = {{Maximum entropy models for antibody diversity}},
-journal = {PNAS},
-year = {2010},
-volume = {107},
+@article{Morcos:2016jt,
+author = {Morcos, Ari S and Harvey, Christopher D},
+title = {{History-dependent variability in population dynamics during evidence accumulation in cortex}},
+journal = {Nat Neurosci},
+year = {2016},
+volume = {19},
 number = {12},
-pages = {5405--5410},
-month = mar
-}
-
-@article{Nguyen:2017ww,
-author = {Nguyen, H Chau and Zecchina, Riccardo and Berg, Johannes},
-title = {{Inverse statistical problems: from the inverse Ising problem to data science}},
-journal = {arXiv},
-year = {2017},
-eprint = {1702.01522v3},
-eprinttype = {arxiv},
-eprintclass = {cond-mat.dis-nn},
-month = feb
-}
-
-@article{Ganmor:2011ct,
-author = {Ganmor, Elad and Segev, Ronen and Schneidman, Elad},
-title = {{Sparse low-order interaction network underlies a highly correlated and learnable neural population code}},
-journal = {PNAS},
-year = {2011},
-volume = {108},
-number = {23},
-pages = {9679--9684}
-}
-
-@book{Anonymous:P7M0DP7U,
-author = {M{\'e}zard, Marc and Montanari, Andrea},
-title = {{Information, Physics, and Computation}},
-publisher = {Oxford University Press},
-year = {2009},
-month = jan
-}
-
-@article{Barton:2013fja,
-author = {Barton, John and Cocco, Simona},
-title = {{Ising models for neural activity inferred via selective cluster expansion: structural and coding properties}},
-journal = {J Stat Mech},
-year = {2013},
-number = {03},
-pages = {1--57}
-}
-
-@article{Broderick:2007wq,
-author = {Broderick, Tamara and Dudik, Miroslav and Tka{\v c}ik, Ga{\v s}per and Schapire, Robert E and Bialek, William},
-title = {{Faster solutions of the inverse pairwise Ising problem}},
-journal = {arXiv},
-year = {2007},
-pages = {1--8},
+pages = {1672--1681},
 month = dec
 }
 
-@book{Cover:2006tl,
-author = {Cover, Thomas M and Thomas, Joy A},
-title = {{Elements of Information Theory}},
-publisher = {John Wiley {\&} Sons},
-year = {2006},
-address = {Hoboken},
-edition = {2nd}
+@article{Knoblich:2003doa,
+author = {Knoblich, G{\"u}nther and Jordan, Jerome Scott},
+title = {{Action coordination in groups and individuals: Learning anticipatory control.}},
+journal = {J Exp Psychol Learn Mem Cogn},
+year = {2003},
+volume = {29},
+number = {5},
+pages = {1006--1016}
 }
 
-@article{Aurell:2012hi,
-author = {Aurell, Erik and Ekeberg, Magnus},
-title = {{Inverse Ising Inference Using All the Data}},
-journal = {Phys Rev Lett},
-year = {2012},
+@article{Washburn:2014ds,
+author = {Washburn, A and DeMarco, M and de Vries, Simon and Ariyabuddhiphongs, Kris and Schmidt, R C and Richardson, Michael J and Riley, Michael A},
+title = {{Dancers entrain more effectively than non-dancers to another actor's movements}},
+journal = {Front Hum Neurosci},
+year = {2014},
+volume = {8},
+pages = {1--14}
+}
+
+@article{Stowers:2017ia,
+author = {Stowers, John R and Hofbauer, Maximilian and Bastien, Renaud and Griessner, Johannes and Higgins, Peter and Farooqui, Sarfarazhussain and Fischer, Ruth M and Nowikovsky, Karin and Haubensak, Wulf and Couzin, Iain D and Tessmar-Raible, Kristin and Straw, Andrew D},
+title = {{Virtual reality for freely moving animals}},
+journal = {Nat Meth},
+year = {2017},
+volume = {14},
+number = {10},
+pages = {995--1002},
+month = oct
+}
+
+@book{Rasmussen:2006vz,
+author = {Rasmussen, C E and Williams, C K I},
+title = {{Gaussian processes for machine learning}},
+publisher = {MIT Press},
+year = {2006},
+address = {Cambridge}
+}
+
+@article{Revzen:2008hb,
+author = {Revzen, Shai and Guckenheimer, John M},
+title = {{Estimating the phase of synchronized oscillators}},
+journal = {Phys Rev E},
+year = {2008},
+volume = {78},
+number = {5},
+pages = {051907--12},
+month = nov
+}
+
+@article{Quiroga:2002km,
+author = {Quiroga, R Quian and Kreuz, T and Grassberger, P},
+title = {{Event synchronization: A simple and fast method to measure synchronicity and time delay patterns}},
+journal = {Phys Rev E},
+year = {2002},
+volume = {66},
+number = {4},
+pages = {041904},
+month = oct
+}
+
+@article{Karney:2011eu,
+author = {Karney, Charles F F},
+title = {{Algorithms for geodesics}},
+journal = {J Geod},
+year = {2013},
+volume = {87},
+number = {1},
+pages = {43--55}
+}
+
+@article{Wolpert:1995tu,
+author = {Wolpert, D M and Ghahramani, Z and Jordan, M I},
+title = {{An internal model for sensorimotor integration}},
+journal = {Science},
+year = {1995},
+volume = {269},
+number = {5232},
+pages = {1880--1882}
+}
+
+@article{Haken:1985eo,
+author = {Haken, H and Kelso, J A S and Bunz, H},
+title = {{A theoretical model of phase transitions in human hand movements}},
+journal = {Biol Cybern},
+year = {1985},
+volume = {51},
+number = {5},
+pages = {347--356}
+}
+
+@article{Shelton:2010gy,
+author = {Shelton, Jose and Kumar, Gideon Praveen},
+title = {{Comparison between Auditory and Visual Simple Reaction Times}},
+journal = {NM},
+year = {2010},
+volume = {1},
+number = {1},
+pages = {30--32}
+}
+
+@inproceedings{Iqbal:gb,
+author = {Iqbal, T and Gonzales, M J and Riek, Laurel D},
+title = {{Joint action perception to enable fluent human-robot teamwork}},
+booktitle = {Proc of the 24th IEEE Int Symp on Robot and Human Commun},
+year = {2015},
+pages = {400--406},
+publisher = {IEEE}
+}
+
+@article{Noy:2011kr,
+author = {Noy, L and Dekel, E and Alon, U},
+title = {{The mirror game as a paradigm for studying the dynamics of two people improvising motion together}},
+journal = {PNAS},
+year = {2011},
 volume = {108},
-number = {9},
-pages = {090201},
+number = {52},
+pages = {20947--20952},
+month = dec
+}
+
+@book{ShaweTaylor:2004vv,
+author = {Shawe-Taylor, John and Cristianini, Nello},
+title = {{Kernel Methods for Pattern Analysis}},
+publisher = {Cambridge University Press},
+year = {2004},
+month = jun
+}
+
+@article{pkc:2007vl,
+author = {Salvador, Stan and Chan, Philip},
+title = {{Toward Accurate Dynamic Time Warping in Linear Time and Space}},
+journal = {Intell Data Anal},
+year = {2007},
+volume = {11},
+number = {5},
+pages = {561--580}
+}
+
+@inproceedings{Caramiaux:2017ie,
+author = {Caramiaux, Baptiste and Bevilacqua, Fr{\'e}d{\'e}ric and Palmer, Caroline and Wanderley, Marcelo},
+title = {{Individuality in Piano Performance Depends on Skill Learning}},
+booktitle = {MOCO '17},
+year = {2017},
+publisher = {ACM},
+address = {London, UK},
+month = jun
+}
+
+@article{Vesper:2013bi,
+author = {Vesper, Cordula and van der Wel, Robrecht P R D and Knoblich, G{\"u}nther and Sebanz, Natalie},
+title = {{Are you ready to jump? Predictive mechanisms in interpersonal coordination.}},
+journal = {J Exp Psychol Hum Percept Perform},
+year = {2013},
+volume = {39},
+number = {1},
+pages = {48--61},
+annote = {Original jumping paradigm: no control over execution, only initial timing counts}
+}
+
+@article{Wickens:2002iv,
+author = {Wickens, Christopher D},
+title = {{Multiple resources and performance prediction}},
+journal = {TIES},
+year = {2002},
+volume = {3},
+number = {2},
+pages = {159--177},
+month = jan
+}
+
+@article{Tarr:2002ir,
+author = {Tarr, Michael J and Warren, William H},
+title = {{Virtual reality in behavioral neuroscience and beyond}},
+journal = {Nat Neurosci},
+year = {2002},
+volume = {5},
+number = {11s},
+pages = {1089--1092},
+month = oct
+}
+
+@webpage{EpicGames:ws,
+author = {{Epic Games}},
+title = {{Performance and profiling}},
+year = {2017},
+url = {https://docs.unrealengine.com/latest/INT/Engine/Performance/}
+}
+
+@article{vanderWel:2011hg,
+author = {van der Wel, Robrecht P R D and Knoblich, Guenther and Sebanz, Natalie},
+title = {{Let the force be with us: Dyads exploit haptic coupling for coordination.}},
+journal = {J Exp Psychol Hum Percept Perform},
+year = {2011},
+volume = {37},
+number = {5},
+pages = {1420--1431}
+}
+
+@article{Allen:1971fu,
+author = {Allen, David M},
+title = {{Mean Square Error of Prediction as a Criterion for Selecting Variables}},
+journal = {Technometrics},
+year = {1971},
+volume = {13},
+number = {3},
+pages = {469--475},
+month = aug
+}
+
+@article{Burger:2014eh,
+author = {Burger, Birgitta and Thompson, Marc R and Luck, Geoff and Saarikallio, Suvi H and Toiviainen, Petri},
+title = {{Hunting for the beat in the body: on period and phase locking in music-induced movement}},
+journal = {Front Hum Neurosci},
+year = {2014},
+volume = {8},
+number = {183},
+pages = {223},
+month = nov
+}
+
+@article{Caramiaux:2018ge,
+author = {Caramiaux, Baptiste and Bevilacqua, Fr{\'e}d{\'e}ric and Wanderley, Marcelo M and Palmer, Caroline},
+title = {{Dissociable effects of practice variability on learning motor and timing skills}},
+journal = {PLoS ONE},
+year = {2018},
+volume = {13},
+number = {3},
+pages = {e0193580},
 month = mar
 }
 
-@article{Hyvarinen:2007ed,
-author = {Hyv{\"a}rinen, Aapo},
-title = {{Some extensions of score matching}},
-journal = {Comput Stat Data Anal},
-year = {2007},
-volume = {51},
-number = {5},
-pages = {2499--2512},
-month = feb
-}
-
-@article{Jaynes:1957fy,
-author = {Jaynes, E T},
-title = {{Information Theory and Statistical Mechanics}},
-journal = {Phys Rev},
-year = {1957},
-volume = {106},
-number = {4},
-pages = {620},
-month = may
-}
-
-@article{Tkacik:2006vq,
-author = {Tka{\v c}ik, Ga{\v s}per and Schneidman, Elad and Berry II, Michael J and Bialek, William},
-title = {{Ising models for networks of real neurons}},
-journal = {arXiv},
+@book{Bishop:2006ui,
+author = {Bishop, Christopher M},
+title = {{Pattern Recognition and Machine Learning}},
+publisher = {Springer Verlag},
 year = {2006},
-month = nov
+month = aug
 }
 
-@article{SohlDickstein:2011im,
-author = {Sohl-Dickstein, Jascha and Battaglino, Peter B and DeWeese, Michael R},
-title = {{New Method for Parameter Estimation in Probabilistic Models: Minimum Probability Flow}},
-journal = {Phys Rev Lett},
-year = {2011},
-volume = {107},
-number = {22},
-pages = {220601},
-month = nov
+@incollection{Schmidt:2008bb,
+author = {Schmidt, Richard C and Richardson, Michael J},
+title = {{Dynamics of Interpersonal Coordination}},
+booktitle = {Coordination: Neural, Behavioral and Social Dynamics},
+year = {2008},
+pages = {281--308},
+publisher = {Springer, Berlin, Heidelberg},
+address = {Berlin, Heidelberg}
+}
+
+@inproceedings{Keogh:2004wu,
+author = {Ratanamahatana, Chotirat Ann and Keogh, Eamonn},
+title = {{Everything you know about Dynamic Time Warping is Wrong}},
+booktitle = {KDD/TDM 2004},
+year = {2004},
+pages = {1--11},
+address = {Seattle},
+month = aug
+}
+
+@article{Dyer:2008dh,
+author = {Dyer, John RG and Ioannou, Christos C and Morrell, Lesley J and Croft, Darren P and Couzin, Iain D and Waters, Dean A and Krause, Jens},
+title = {{Consensus decision making in human crowds}},
+journal = {Animal Behav},
+year = {2008},
+volume = {75},
+number = {2},
+pages = {461--470}
+}
+
+@book{Ware:2013uk,
+author = {Ware, Colin},
+title = {{Information Visualization: Perception for Design}},
+publisher = {Elsevier, Inc.},
+year = {2013},
+edition = {Third Edition}
+}
+
+@webpage{Vernier,
+title = {{Motion Detector User Manual}},
+year = {2018},
+url = {www.vernier.commanualsmd-btd}
+}
+
+@article{Bogacz:2006fja,
+author = {Bogacz, Rafal and Brown, Eric and Moehlis, Jeff and Holmes, Philip and Cohen, Jonathan D},
+title = {{The physics of optimal decision making: A formal analysis of models of performance in two-alternative forced-choice tasks.}},
+journal = {Psychological Review},
+year = {2006},
+volume = {113},
+number = {4},
+pages = {700--765}
+}
+
+@article{Richardson:2007df,
+author = {Richardson, Michael J and Marsh, Kerry L and Isenhower, Robert W and Goodman, Justin R L and Schmidt, R C},
+title = {{Rocking together: Dynamics of intentional and unintentional interpersonal coordination}},
+journal = {Hum Mov Sci},
+year = {2007},
+volume = {26},
+number = {6},
+pages = {867--891},
+month = dec
+}
+
+@article{Fletcher:1940kd,
+author = {Fletcher, Harvey},
+title = {{Auditory Patterns}},
+journal = {Rev Mod Phys},
+year = {1940},
+volume = {12},
+number = {1},
+pages = {47--65}
 }
 
